Started adding info about GitHub.

--- a/git.tex
+++ b/git.tex
@@ -162,46 +162,33 @@ Därför bör alla incheckningar följas av ett \emph{bygge}.
 
 \begin{frame}
 \frametitle{Git}
-Det finns ett stort antal versionshanteringssystem, här kommer vi att gå igenom git-hub.
+Det finns ett stort antal versionshanteringssystem, här kommer vi att gå igenom git.
 
-Open source-projekt får använda git-hub gratis och ställer upp med server-utrymme.
-
-\end{frame}
-
-
-\begin{frame}
-\frametitle{Att installera en git-klient}
-\url{mattis.ktd} (193.11.44.151) har en git-server installerad.
-
-Klientmjukvara finns på \url{http://git-scm.com/download/} för OS X, Linux, Solaris och Windows.  Ladda ner och installera.
-
-Windows-versionen kommer med ett grafiskt gränssnitt.  \href{http://www.syntevo.com/smartgit/download}{SmartGit} finns för OS X, Linux, och Windows. Jag kommer att parallellt visa kommandoradsinstruktionerna med motsvarande SmartGit-interaktion.
-
-\end{frame}
-
-\begin{frame}[fragile]
-\frametitle{Förberedelser}
-För att autentisera oss mot git-servern skapar vi ett \href{http://www.openssh.com/}{ssh}-nyckelpar:
-
-På Windows behöver man starta \textbf{Git Bash}, som ger en bash-miljö, på OS X räcker det med att starta \textbf{Terminal}.
-\end{frame}
-
-
-\begin{frame}[fragile]
-Tala också om för din git-klient vem du är:
-\begin{dialogue}
-prompt> #textbf(git config --global user.name "Kai-Mikael Jää-Aro")
-prompt> #textbf(git config --global user.email kaimikael.jaaaro@sh.se)
-\end{dialogue}
-Detta gör identiteterna tydligare i loggar \mm.
-
-\end{frame}
-
-\begin{frame}
-  \frametitle{Att använda git} git är ett \emph{distribuerat} versionskontrollsystem.  \Mao lagrar \emph{alla} utvecklare en (komprimerad) kopia av hela databasen, men normalt utser man ett specifikt arkiv till att vara ``origin'', till vilket alla kopierar sitt material och som alla hämtar ifrån.
+  git är ett \emph{distribuerat} versionskontrollsystem.  \Mao lagrar \emph{alla} utvecklare en (komprimerad) kopia av hela databasen, men normalt utser man ett specifikt arkiv till att vara ``origin'', till vilket alla kopierar sitt material och som alla hämtar ifrån.
 
 Dock är man inte beroende av det centrala arkivet utan kan arbeta offline med sin kopia tills man får kontakt med arkivet igen.
 
+\end{frame}
+
+\begin{frame}
+  \frametitle{Att använda git}
+Grunden för git är ett kommndoradsgränssnitt, men det finns flera olika grafiska gränssnitt.
+
+GitHub (\url{https://github.com/}) gör tillgängligt både ett webbgränssnitt till git och gratis server-utrymme för open source-projekt.
+
+\end{frame}
+
+
+\begin{frame}
+\frametitle{Att skapa ett arkiv}
+
+\end{frame}
+
+\begin{frame}[fragile]
+\end{frame}
+
+
+\begin{frame}[fragile]
 \end{frame}
 
 \begin{frame}[fragile]
