Changed a frame title

--- a/git.tex
+++ b/git.tex
@@ -235,18 +235,11 @@ GitHub (\url{https://github.com/}) gör tillgängligt både ett webbgränssnitt 
 \end{frame}
 
 \begin{frame}[fragile]
-
+\frametitle{Distribuerad användning}
 \end{frame}
 
 \begin{frame}[fragile]
-\frametitle{Att hämta från ett  \emph{remote repository}}
-Att sedan hämta uppdaterade filer från det centrala arkivet görs med 
-\begin{dialogue}
-prompt> #textbf(git fetch)
-\end{dialogue}
 
-%Nu kan dessa filer dock ha \emph{konflikter} med filer man själv har ändrat.
-%git pull
 \end{frame}
 
 % \begin{frame}
