--- a/git.tex
+++ b/git.tex
@@ -95,7 +95,7 @@ Därför måste vi:
 \end{frame}
 
 \begin{frame}
-\frametitle{Versionskontroll} 
+\frametitle{Versionskontroll är lösningen} 
   \begin{itemize}
   \item Ett arkiv.
   \item\emph{Incheckning} av kod (\emph{revisioner}) i arkivet.
@@ -138,118 +138,148 @@ Dock är man inte beroende av det centrala arkivet utan kan arbeta offline med s
 
 \begin{frame}
   \frametitle{Att använda git}
-Grunden för git är ett kommndoradsgränssnitt, men det finns flera olika grafiska gränssnitt.
+Grunden för git är ett kommandoradsgränssnitt. Det finns flera olika
+grafiska gränssnitt. (Mera avancerade övningar kräver användning av kommandotolken)
 
 GitHub (\url{https://github.com/}) gör tillgängligt både ett grafiskt gränssnitt till git och gratis server-utrymme för open source-projekt.
 
 \end{frame}
 
-\section{Att skaffa Git}
+\section{Att sätta upp Git}
 \begin{frame}
-\frametitle{}
+\frametitle{Skapa en användare}
 \includegraphics{GitHubSignUp}
 \end{frame}
 
-\begin{frame}[fragile]
-\includegraphics{ChoosePlan}
+\begin{frame}
+\frametitle{Välj funktioner/kostnadsnivå}
+\includegraphics{GitHubChoosePlan}
 \end{frame}
 
 
-\begin{frame}[fragile]
-\includegraphics{CreateRepository}  
+\begin{frame}
+\frametitle{Skapa ett arkiv}
+\includegraphics{GitHubCreateRepository}  
 \end{frame}
 
-\begin{frame}[fragile]
-\includegraphics{NameRepository}
+\begin{frame}
+\frametitle{Konfigurera arkivet}
+\includegraphics{GitHubNameRepository}
 \end{frame}
 
-\begin{frame}[fragile]
+\begin{frame}
+\frametitle{Lägg till medarbetare}
+\includegraphics{GitHubAddCollaborators}
+\end{frame}
+
+\begin{frame}
+\frametitle{Gör en lokal arkiv-klon}
+\includegraphics{GitHubWebInterface}
+\end{frame}
+
+\subsection{GitHub-klienten}
+\begin{frame}
+\frametitle{Hämta klienten}
 \includegraphics{GitHubDownload}
 
 \end{frame}
 
-\begin{frame}[fragile]
+\begin{frame}
+\frametitle{Installera klienten}
 \includegraphics{GitHubWelcome}
 \end{frame}
 
-\begin{frame}[fragile]
+\begin{frame}
+\frametitle{Logga in på arkivet}
 \includegraphics{GitHubLogin}
 \end{frame}
 
-\begin{frame}[fragile]
+\begin{frame}
 \includegraphics{GitHubConfig}
 \end{frame}
 
-\begin{frame}[fragile]
+\begin{frame}
+\frametitle{Hitta lokala arkiv}
 \includegraphics{GitHubFindLocalRepositories}
 \end{frame}
+
 
 \begin{frame}
 \includegraphics{GitHubCloneRepository}
 \end{frame}
 
-\begin{frame}[fragile]
+\begin{frame}
+\frametitle{Lägg till filer i arkivet}
 \includegraphics{GitHubAddFiles}
 \end{frame}
 
-\begin{frame}[fragile]
-\includegraphics{GitHubWebInterface}
-\end{frame}
-
-\begin{frame}[fragile]
+\begin{frame}
+\frametitle{Checka in uppdaterade filer}
 \includegraphics{GitHubCommitChanges}
 \end{frame}
 
-\begin{frame}[fragile]
-\frametitle{Distribuerad användning}
-\includegraphics{GitHubAddCollaborators}
-\end{frame}
+\begin{frame}
+Om flera utvecklare ändrar på samma ställe i en fil uppstår en
+\emph{konflikt}.  Detta markeras i klienten, men måste lösas manuellt.
 
-
-\begin{frame}[fragile]
 \includegraphics{GitHubConflict}
 \end{frame}
 
 \begin{frame}
+Den synkroniserade filen har markörer vid konfliktpunkten.
+
 \includegraphics{EmacsConflict}
 \end{frame}
 
 
 \begin{frame}
+Dessa ska hanteras manuellt och filen kan sedan checkas in igen.
+
 \includegraphics{EmacsConflictResolved}
 \end{frame}
 
 \begin{frame}[fragile]
-Versionshanteringssystemet förstår bara koden som en sträng text.
-Överlappande ändringar i samma kod flaggas, men om någon skulle ändra
-funktionshuvudet till \lstinline+public void func1(int par1, int par2)+ invalideras alla anrop till \lstinline+func1+, men
-versionshanteringssystemet ser inte detta.
+\textbf{Obs!}
+Git förstår bara filer som en sträng text.
+Konflikter förstås som ändringar på samma position av flera utvecklare, men om någon skulle ändra
+en funktion \lstinline+public void func1(int par1, int par2)+ till \lstinline+public void func1(int par1)+ invalideras alla anrop till \lstinline+func1+, men
+git varnar inte för detta.
 
-Därför bör alla incheckningar följas av ett \emph{bygge}.
+Därför bör alla incheckningar följas av ett \emph{bygge} för att
+kontrollera att allt fortfarande fungerar.
 \end{frame}
 
-\begin{frame}[fragile]
+\begin{frame}
+  \frametitle{Att ångra sig}
+  \includegraphics{GitHubRollback}
+\end{frame}
+
+\begin{frame}
 \frametitle{Att ha en privat utvecklingsgren}
 Ett vanligt arbetsflöde är att man har en \emph{master branch}, där koden är garanterad att vara stabil och körbar.  Olika utvecklare kan sedan lätt skapa en egen gren att koda och testa i.  Om något blir fel kan man alltid backa i denna gren och hålla mastern stabil.  Man kan självfallet göra ytterligare grenar för olika tester.
 
 git-arkiven är uppbyggda så att de låter oss arbeta på vilken punkt i trädet vi vill.  Man kan se det som att man har en pekare in i trädet som pekar ut den aktuella uppsättningen filer som vi arbetar på.  Vid behov kan vi flytta pekaren nån annanstans och arbeta där istället.
 \end{frame}
 
-\begin{frame}[fragile]
+\begin{frame}
+\includegraphics{GitHubCreateNewBranch}  
+\end{frame}
+
+\begin{frame}
 \frametitle{\emph{Merge}}
 
-När man har en utvecklingsversion man är nöjd med är det dags att koppla ihop den med mastern.  
+\includegraphics{GitHubMerge}
 
 \end{frame}
 
-\begin{frame}[fragile]
+\begin{frame}
 \frametitle{\emph{merge} av binära filer}
-git klarar inte (idag) av att göra merge på binära filer -- \mao texturer, animationer, \odyl.  Somliga installationer kan ha en mergetool som kan hjälpa till, men i allmänhet måste man manuellt hämta de binära filer man vill ha.
+git klarar inte av att göra merge på binära filer -- \mao texturer, animationer, \odyl.  Somliga installationer kan ha en mergetool som kan hjälpa till, men i allmänhet måste man manuellt hämta de binära filer man vill ha.
   
 \end{frame}
 
 
-\begin{frame}[fragile]
+\begin{frame}
 \frametitle{Mer läsning}  
 \href{http://git-scm.com/book/en/v2/}{\textsl{Pro Git, 2nd Edition}, Scott Chacon \& Ben Straub.}
 \end{frame}
